--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
-title: Welcome to Generic QR's homepage
-description: This is a description
+title: Generic QR
+description: A generic barcode scanning tool
