--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.lohjason.genericqr"
         minSdkVersion 21
         targetSdkVersion 27
-        versionCode 2
-        versionName "1.0.0"
+        versionCode 3
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -22,7 +22,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug{
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,7 +36,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
 
-    implementation "io.reactivex.rxjava2:rxjava:2.1.14"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.16"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
     implementation 'io.reactivex:rxkotlin:1.0.0'
 
